# dais-agenda

./: .gitignore  README.md  pyproject.toml
backups/data/sessions/: sessions_data_engineering_and_streaming.jsonl
backups/early_data/: sessions_.jsonl  sessions_analytics_and_bi.jsonl  sessions_artificial_intelligence.jsonl  sessions_data_and_ai_governance.jsonl  sessions_data_engineering_and_streaming.jsonl  sessions_data_lakehouse_architecture_and_implementation.jsonl  sessions_data_sharing_and_collaboration.jsonl  sessions_data_strategy.jsonl  sessions_data_warehousing.jsonl
data/sessions/: sessions.jsonl  sessions_.jsonl  sessions_by_track_.jsonl  sessions_by_track_analytics_and_bi.jsonl  sessions_by_track_artificial_intelligence.jsonl  sessions_by_track_data_and_ai_governance.jsonl  sessions_by_track_data_engineering_and_streaming.jsonl  sessions_by_track_data_lakehouse_architecture_and_implementation.jsonl  sessions_by_track_data_sharing_and_collaboration.jsonl  sessions_by_track_data_strategy.jsonl  sessions_by_track_data_warehousing.jsonl  sessions_data_strategy.jsonl
data/user/: ratings.jsonl  tags.jsonl
data/user_data/: user_ratings.jsonl
src/dais_agenda/: __init__.py  cli.py  scraper.py  scraper_v2.py  session_manager.py  user_data.py
src/data/sessions/: sessions_.jsonl
tests/: test_scraper.py
